--- a/src/UPS Code/app.css
+++ b/src/UPS Code/app.css
@@ -1,29 +1,25 @@
-div.jumbotron {
-  background-color: rgb(230, 230, 255);
+@font-face {
+  font-family: 'UPS Sans Regular';
+  src: url('../fonts/ups-sans-regular.eot'); /* IE9 Compat Modes */
+  src: url('../fonts/ups-sans-regular.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
+  url('../fonts/ups-sans-regular.woff') format('woff'), /* Modern Browsers */
+  url('../fonts/ups-sans-regular.ttf')  format('truetype'), /* Safari, Android, iOS */
+  url('../fonts/ups-sans-regular.svg#svgFontName') format('svg'); /* Legacy iOS & Legacy Android */
 }
 
-div.jumbotron p {
-  font-size: 14px;
+@font-face {
+  font-family: 'UPS Sans Bold';
+  src: url('../fonts/ups-sans-bold.eot'); /* IE9 Compat Modes */
+  src: url('../fonts/ups-sans-bold.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
+  url('../fonts/ups-sans-bold.woff') format('woff'), /* Modern Browsers */
+  url('../fonts/ups-sans-bold.ttf')  format('truetype'), /* Safari, Android, iOS */
+  url('../fonts/ups-sans-bold.svg#svgFontName') format('svg'); /* Legacy iOS & Legacy Android */
 }
 
-div.jumbotron img {
-  max-height: 400px;
-  margin-left: auto;
-  margin-right: auto;
-}
-
-footer {
-  background-color: #222;
-  color: #eee;
-}
-* {
-	box-sizing: content-box !important;
-}
-section.upsBoxAnim {
-	background-color: #fff;
-	padding-bottom: 160px;
-}
-/*Provided App Styles*/
+/* http://meyerweb.com/eric/tools/css/reset/
+   v2.0 | 20110126
+   License: none (public domain)
+*/
 
 html, body, div, span, applet, object, iframe,
 h1, h2, h3, h4, h5, h6, p, blockquote, pre,
@@ -118,6 +114,10 @@ img {
   background-color: #FFE38F;
 }
 
+#footer {
+  background: url(../img/footer/footer-bg.jpg) center 0 repeat-y;
+}
+
 #steps {
   height: 879px;
   position: relative;
@@ -205,7 +205,7 @@ img {
   margin: 0;
   padding: 0;
   height: 90px;
-  /*background: url('../img/progress-bar/progress-bar.jpg') 0 0 no-repeat;*/
+  background: url('../img/progress-bar/progress-bar.jpg') 0 0 no-repeat;
 }
 
 .progress-bar-steps li a,
@@ -218,7 +218,7 @@ img {
 
 .progress-bar-steps li.visited a:hover {
   cursor: pointer;
-  /*background: url('../img/progress-bar/progress-bar-hover.png') 0 0 no-repeat;*/
+  background: url('../img/progress-bar/progress-bar-hover.png') 0 0 no-repeat;
 }
 
 .progress-bar-steps li.where,
@@ -430,337 +430,3 @@ img {
     width: 110px;
     font-family: 'UPS Sans Bold', Georgia, "Times New Roman", Times, serif;
   }
-/*UPS Animation Styles*/
-@font-face {
-    font-family: upsFont;
-    src: local(upsFont), url('../assets/fonts/UPSBerlingskeSans-Rg.otf') format('opentype');
-}
-@font-face {
-    font-family: upsFontB;
-    src: local(upsFontB), url('../assets/fonts/UPSBerlingskeSans-Bd.otf') format('opentype');
-}
-body {
-    font-family: upsFont;
-    line-height: 100%;
-    font-size: 16px;
-    width: 1200px;
-    margin: 0 auto;
-}
-line {
-    fill: none;
-    shape-rendering: crispEdges;
-}
-
-/*Headings for top of tool*/
-
-h1 {
-    text-align: center;
-    font-weight: 600;
-    font-size: 32px;
-    margin: 40px auto 20px;
-}
-h5 {
-    text-align: center;
-    font-weight: 200;
-    margin: 10px auto 40px;
-}
-h2 {
-    text-align: left;
-    font-weight: 200;
-    font-size: 26px;
-    font-weight: 600;
-    margin: 20px auto 40px;
-    padding: 10px 0 20px;
-    width: 800px;
-    border-bottom: 3px solid gold;
-}
-
-/*When entering site the form is in it's prestate*/
-
-span.measureType {
-    /*, .measureLine {*/
-    display: none;
-}
-#widthLabel,
-#lengthLabel,
-#heightLabel {
-    color: #d9d9d6;
-}
-
-/*Tool Wrapper*/
-
-.toolWrapper {
-    border-top: 10px solid #aaa;
-    border-left: 2px solid #aaa;
-    border-right: 2px solid #aaa;
-    border-bottom: 2px solid #aaa;
-    width: 800px;
-    margin: 20px auto;
-    height: 800px;
-}
-.userInput {
-    border: none;
-    width: 266px;
-    float: left;
-    padding: 30px 10px 0 30px;
-}
-.userInput ul {
-	list-style-type: none;
-}
-form.myForm {
-    border: none;
-    width: 100%;
-    float: left;
-}
-label {
-    font-weight: bold;
-    float: left;
-    width: 100%;
-    margin: 10px 0 0;
-    font-size: 14px;
-}
-form ul {
-    float: left;
-    width: 100%;
-    margin: 0;
-    padding: 0;
-}
-form ul li {
-    float: left;
-    width: 100%;
-    position: relative;
-}
-form ul li label {
-    font-size: 14px;
-}
-form ul li.valueInput a {
-    position: absolute;
-    right: 70px;
-    top: 12px;
-    color: #000;
-    font-size: 13px;
-}
-form ul li span {
-    float: left;
-    display: block;
-    margin: 25px 0 0 5px;
-}
-li.valueInput span {
-    right: 0;
-    font-size: 13px;
-}
-select,
-input {
-    float: left;
-    border: 1px solid #999;
-    border-radius: 2px;
-    background: white;
-    padding: 10px 10px;
-    margin: 10px 0;
-}
-select {
-    border-radius: 6px;
-    width: 229px;
-}
-input {
-    width: 205px;
-}
-.boxAnim {
-    float: left;
-    position: relative;
-    width: 450px;
-    margin: 40px 40px 40px 0;
-    height: 580px;
-    border: 2px solid #aaa;
-    background-color: #fff;
-}
-li.viewOptions label.radio {
-    float: left;
-    width: 56px;
-}
-img.helpIcon {
-    position: absolute;
-    right: 40px;
-    top: 10px;
-}
-.dynamicLabels.wrap {
-    position: absolute;
-    display: block;
-    font-size: 14px;
-    font-weight: bold;
-    font-family: ups;
-}
-svg#svgWrap {
-    width: 390px;
-    height: 360px;
-    margin: 0 30px 20px;
-}
-.boxAnim .info.icon {
-    padding: 10px;
-    width: 390px;
-    margin: 20px;
-    background-color: #222;
-}
-.boxAnim .info.icon p {
-    height: auto;
-    color: #fff;
-    font-size: 14px;
-    line-height: 22px;
-    margin-right: 37px;
-    margin-left: 0;
-    padding: 3px;
-}
-.boxAnim .info.icon img {
-    width: 39px;
-    height: 39px;
-    float: left;
-    margin: 4px 16px 0px 4px;
-}
-span.bold {
-    font-weight: 600;
-}
-
-/*Dynamic Measurements Section*/
-
-.boxAnim ul li span.dynamicWrap {
-    text-align: center;
-    float: left;
-    width: 100%;
-    font-size: 20px;
-    font-weight: bold;
-    margin: 20px 0 0;
-    padding: 0;
-    font-family: upsFontB;
-    color: #242424;
-}
-.boxAnim ul li span.dynamicAmt {
-    margin: 10px 5px;
-}
-.measurements ul li {
-    width: 25%;
-    float: left;
-    text-align: center;
-}
-.measurements ul li label {
-    font-weight: normal;
-    color: #6e6e6e;
-    font-family: upsFont;
-    font-size: 14px;
-}
-
-/*Ship Tip Section*/
-
-.didYouKnow {
-    float: left;
-    position: relative;
-    width: 687px;
-    height: 36px;
-    margin: 0 30px 40px;
-    border: 2px solid orange;
-    border-radius: 12px;
-    text-align: center;
-    padding: 20px;
-}
-.didYouKnow p {
-    float: left;
-    text-align: center;
-    width: 88%;
-    margin-top: 10px;
-}
-.didYouKnow img.icon {
-    display: inline;
-    float: left;
-    margin: 0;
-    padding: 0;
-}
-.didYouKnow img.arrow {
-    display: inline;
-    float: right;
-    margin: 12px 8px 0 0;
-    padding: 0;
-    width: 16px;
-}
-
-/*Checkbox Slider*/
-
-
-/* The switch - the box around the slider */
-
-.switch {
-    position: relative;
-    display: inline-block;
-    width: 90px;
-    height: 34px;
-}
-.slider span {
-    position: absolute;
-    z-index: 10;
-    float: none;
-    margin: 0;
-    font-weight: normal;
-    top: 8.5px;
-}
-.slider span#no {
-    right: 15px;
-}
-.slider span#yes {
-    left: 15px;
-    display: none;
-}
-
-/* Hide default HTML checkbox */
-
-.switch input {
-    display: none;
-}
-
-/* The slider */
-
-.slider {
-    position: absolute;
-    cursor: pointer;
-    top: 0;
-    left: 0;
-    right: 0;
-    bottom: 0;
-    background-color: #ccc;
-    -webkit-transition: .4s;
-    transition: .4s;
-}
-.slider:before {
-    position: absolute;
-    content: "";
-    height: 26px;
-    width: 26px;
-    left: 4px;
-    bottom: 4px;
-    background-color: white;
-    -webkit-transition: .4s;
-    transition: .4s;
-}
-input:checked + .slider {
-    background-color: #2196F3;
-}
-input:checked + .slider span#no {
-    display: none;
-}
-input:checked + .slider span#yes {
-    display: inline;
-}
-input:focus + .slider {
-    box-shadow: 0 0 1px #2196F3;
-}
-input:checked + .slider:before {
-    -webkit-transform: translateX(56px);
-    -ms-transform: translateX(56px);
-    transform: translateX(56px);
-}
-
-/* Rounded sliders */
-
-.slider.round {
-    border-radius: 34px;
-}
-.slider.round:before {
-    border-radius: 50%;
-}
